--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'org.mockito:mockito-all:2.0.2-beta'
-    compile 'com.jakewharton.timber:timber:3.1.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.4.0'
+    compile 'com.android.support:support-v4:23.1.1'
 }
